# django-celery-redis-setup

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
django_celery_redis/: manage.py
django_celery_redis/django_celery_redis/: __init__.py  asgi.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
django_celery_redis/emailer/: tasks.py
